# katana

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  Cargo.toml  Makefile  README-jp.md  README.ja.md  README.md  fix_settings.py  fix_workspace.py  lefthook.yml  patch.py  print_used.rs  test_halign.rs  test_markdown.md  test_snapshot.rs  test_table_align.md
crates/katana-core/: Cargo.toml
crates/katana-core/src/: document.rs  lib.rs  preview.rs  update.rs  workspace.rs
crates/katana-core/src/ai/: mod.rs
crates/katana-core/src/emoji/: raster.rs
crates/katana-core/src/html/: mod.rs  node.rs  parser.rs
crates/katana-core/src/html/node/: impls.rs  types.rs
crates/katana-core/src/html/parser/: inline.rs  mod.rs  regex.rs
crates/katana-core/src/markdown/: color_preset.rs  diagram.rs  drawio_renderer.rs  export.rs  fence.rs  mermaid_renderer.rs  mod.rs  outline.rs  plantuml_renderer.rs  render.rs  svg_rasterize.rs  test_comrak.rs
crates/katana-core/src/markdown/color_preset/: dark.rs  light.rs  mod.rs
crates/katana-core/src/markdown/drawio_renderer/: edge.rs  mod.rs  parse.rs  svg.rs  utils.rs  vertex.rs
crates/katana-core/src/markdown/export/: html.rs  image.rs  pdf.rs
crates/katana-core/src/markdown/mermaid_renderer/: mod.rs  render.rs  resolve.rs
crates/katana-core/src/plugin/: mod.rs
crates/katana-core/src/preview/: image.rs  mod.rs
crates/katana-core/src/preview/section/: fence.rs  html.rs  local_image.rs  math.rs  mod.rs
crates/katana-core/src/update/: download.rs  installer.rs  mod.rs  version.rs
crates/katana-core/tests/: ai.rs  document.rs  markdown.rs  markdown_diagram.rs  markdown_drawio.rs  markdown_mermaid.rs  markdown_plantuml.rs  markdown_svg_rasterize.rs  plugin.rs  preview.rs  workspace.rs
crates/katana-linter/: Cargo.toml  ast_linter.rs
crates/katana-linter/src/: lib.rs  utils.rs
crates/katana-linter/src/rules/: changelog.rs  i18n.rs  locales.rs  markdown.rs  mod.rs  rust.rs  theme.rs
crates/katana-linter/src/rules/coding/: comment_style.rs  error_first.rs  lazy_code.rs  magic_numbers.rs  mod.rs  performance.rs  prohibited_attrs.rs  prohibited_types.rs
crates/katana-linter/src/rules/domains/: changelog.rs  font_normalization.rs  mod.rs
crates/katana-linter/src/rules/structure/: file_length.rs  function_length.rs  mod.rs  nesting_depth.rs  pub_free_fn.rs  type_separation.rs
crates/katana-linter/src/utils/: file_collector.rs  json.rs  mod.rs  parser.rs  reporter.rs
crates/katana-linter/tests/: ast_linter.rs
crates/katana-platform/: Cargo.toml  build.rs
crates/katana-platform/src/: cache.rs  filesystem.rs  lib.rs  os_fonts.rs  os_theme.rs  settings.rs  theme.rs
crates/katana-platform/src/cache/: default.rs  memory.rs  mod.rs
crates/katana-platform/src/filesystem/: mod.rs  scanner.rs  service.rs
crates/katana-platform/src/settings/: defaults.rs  impls.rs  migration.rs  migration_0_1_2.rs  migration_0_1_3_to_0_1_4.rs  migration_0_1_4_to_0_2_0.rs  repository.rs  service.rs  tests.rs  types.rs
crates/katana-platform/src/settings/migration/: mod.rs  v0_1_2.rs  v0_1_3_to_0_1_4.rs  v0_1_4_to_0_2_0.rs
crates/katana-platform/src/settings/types/: app.rs  behavior.rs  export.rs  font.rs  layout.rs  mod.rs  performance.rs  theme.rs  update.rs  workspace.rs
crates/katana-platform/src/theme/: builder.rs  impls.rs  migration.rs  mod.rs  palettes.rs  preset.rs  types.rs
crates/katana-platform/src/theme/migration/: constants.rs  legacy_types.rs  mod.rs
crates/katana-platform/src/theme/presets/: mod.rs
crates/katana-platform/tests/: filesystem.rs  font_settings.rs  os_fonts.rs  settings.rs  theme_test_dark.rs  theme_test_local.rs
crates/katana-ui/: Cargo.toml  Info.plist  build.rs
crates/katana-ui/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  languages.json  pt.json  zh-CN.json  zh-TW.json
crates/katana-ui/scripts/: extract_http_cache_loader_tests.py
crates/katana-ui/src/: about_info.rs  app_state.rs  changelog.rs  diagram_controller.rs  font_loader.rs  html_renderer.rs  http_cache_loader.rs  i18n.rs  icon.rs  lib.rs  macos_menu.m  main.rs  native_menu.rs  preview_pane.rs  preview_pane_ui.rs  settings_window.rs  shell.rs  shell_logic.rs  shell_tests.rs  shell_ui.rs  shell_ui_tests.rs  svg_loader.rs  theme_bridge.rs  updater.rs  widgets.rs
crates/katana-ui/src/about_info/: mod.rs
crates/katana-ui/src/app/: action.rs  document.rs  download.rs  export.rs  mod.rs  preview.rs  update.rs  workspace.rs
crates/katana-ui/src/changelog/: mod.rs
crates/katana-ui/src/font_loader/: mod.rs
crates/katana-ui/src/html_renderer/: mod.rs
crates/katana-ui/src/http_cache_loader/: disk.rs  fetch.rs  loader.rs  mod.rs  tests.rs  types.rs
crates/katana-ui/src/i18n/: mod.rs  types.rs
crates/katana-ui/src/preview_pane/: background.rs  core_render.rs  fullscreen.rs  html.rs  images.rs  math.rs  mod.rs  pane.rs  renderer.rs  section.rs  tests.rs  types.rs  ui.rs  utils.rs  viewer.rs
crates/katana-ui/src/settings/: mod.rs
crates/katana-ui/src/settings/tabs/: behavior.rs  font.rs  layout.rs  mod.rs  theme.rs  updates.rs  workspace.rs
crates/katana-ui/src/state/: config.rs  document.rs  layout.rs  mod.rs  scroll.rs  search.rs  update.rs  workspace.rs
crates/katana-ui/src/svg_loader/: mod.rs
crates/katana-ui/src/theme_bridge/: mod.rs
crates/katana-ui/src/views/: app_frame.rs  mod.rs  splash.rs  top_bar.rs
crates/katana-ui/src/widgets/: accordion.rs  color_picker.rs  combo_box.rs  list_item.rs  mod.rs  modal.rs  toggle.rs
crates/katana-ui/tests/: app_state.rs  check_for_updates_test.rs  diagram_rendering.rs  font_bridge.rs  font_realtime.rs  i18n.rs  integration.rs  overlap_checker.rs  preview_pane.rs  sample_fixture_tests.rs  settings_window.rs  shell_logic.rs  theme.rs  theme_bridge.rs  theme_rendering_sync.rs  tree_layout.rs  underline_rendering.rs
crates/katana-ui/tests/fixtures/: sample.ja.md  sample.md  sample_basic.ja.md  sample_basic.md  sample_diagrams.ja.md  sample_diagrams.md  sample_html.ja.md  sample_html.md
crates/katana-ui/tests/integration/: sample_fixture_tests.rs
(+338 files in other folders)
