[workspace]
members = [
    "crates/katana-core",
    "crates/katana-linter",
    "crates/katana-platform",
    "crates/katana-ui",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/hiroyuki-furuno/katana"

[workspace.dependencies]
# UI
eframe = { version = "0.33", features = ["default"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["image", "file", "http", "svg", "svg_text"] }
egui_commonmark = { version = "0.22", default-features = false, features = ["better_syntax_highlighting", "load-images", "pulldown_cmark"] }

# Markdown
comrak = { version = "0.29", default-features = false, features = ["shortcodes"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3"
syn = { version = "2", features = ["full", "visit"] }
ignore = "0.4"

# Diagram rendering
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
xmltree = "0.12"

[patch.crates-io]
egui_commonmark = { path = "vendor/egui_commonmark" }
