[package]
name = "katana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA core: document model, workspace model, markdown pipeline, AI orchestration, and plugin contracts"

[dependencies]
comrak.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
xmltree.workspace = true
dirs-sys = "0.5"
tempfile.workspace = true
regex = "1.12.3"
headless_chrome.workspace = true
base64 = "0.22"
ureq.workspace = true
semver.workspace = true
zip.workspace = true

[dev-dependencies]
pulldown-cmark = "0.13.2"
tempfile.workspace = true
tracing-subscriber = "0.3"
