[package]
name = "katana-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Katana AST Linter: workspace-wide static analysis for coding standards enforcement"

[[test]]
name = "ast_linter"
path = "ast_linter.rs"

[dev-dependencies]
syn.workspace = true
ignore.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile.workspace = true
