[package]
name = "katana-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA AST Linter: workspace-wide static analysis for coding standards enforcement"

[dependencies]
syn.workspace = true
ignore.workspace = true
serde_json.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile.workspace = true
