[package]
name = "katana-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA UI: egui application shell, panes, menu wiring, and presentation state"

[dependencies]
katana-core = { path = "../katana-core" }
katana-platform = { path = "../katana-platform" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_commonmark.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json.workspace = true

[build-dependencies]
cc = "1"

[[bin]]
name = "KatanA"
path = "src/main.rs"

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["snapshot", "wgpu", "eframe"] }
tempfile = "3"
time = "0.3"
