[package]
name = "katana-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA UI: egui application shell, panes, menu wiring, and presentation state"

[dependencies]
katana-core = { path = "../katana-core" }
katana-platform = { path = "../katana-platform" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_commonmark.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json.workspace = true
open = "5.3.3"
resvg = { version = "0.45.1", default-features = true }
ehttp = "0.6.0"
dirs = "6.0.0"
sha2 = "0.10"
regex = "1.12.3"
chrono = "0.4.44"
tempfile = "3"
base64 = "0.22.1"
mathjax_svg = "3.2.0"

[build-dependencies]
cc = "1"

[[bin]]
name = "KatanA"
path = "src/main.rs"

[package.metadata.bundle]
name = "KatanA Desktop"
identifier = "com.github.hiroyukifuruno.katana"
icon = ["../../assets/icon.icns"]
copyright = "Copyright © 2026 Hiroyuki Furuno"
category = "public.app-category.developer-tools"
short_description = "A fast, lightweight Markdown workspace for macOS"

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["snapshot", "wgpu", "eframe"] }
time = "0.3"
